# mcp-tutorial

./: agentic_mcp.md  checkpoint_06.sqlite-shm  checkpoint_06.sqlite-wal  pyproject.toml  requirements.txt
setup_repo_instructions/: instructions_gitlab setup.txt
src/: main-solution-part4.py  main-solution.py  main.py  main_old.py  my_client.py  my_server.py  run.py  server_divide.py  voorbeeld.py
