[project]
name = "defensie-casus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "fastapi==0.116.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-core==0.3.74",
    "langchain-ollama==0.3.6",
    "langchain-openai==0.3.30",
    "langgraph==0.6.5",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pipreqs>=0.5.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.20",
    "rich==14.1.0",
    "ruff>=0.11.12",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]
